python training
Day 2 TASK

Python 3.7.1 (v3.7.1:260ec2c36a, Oct 20 2018, 14:05:16) [MSC v.1915 32 bit (Intel)] on win32
if (3 < 2):
    print("hello")
else:
    print("this condition was not true")
this condition was not true
if (3==3)
    print ("true")
    
  File "<input>", line 1
    if (3==3)
            ^
SyntaxError: invalid syntax
3==3
True
